<resources>
    <string name="app_name">CalorieCounter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_food_display">FoodDisplayActivity</string>
    <string name="title_activity_weekly_progression">WeeklyProgressionActivity</string>
    <string name="title_Daily_Macro_Counter">DailyMacroCounterActivity</string>
    <string name="title_activity_daily_consumption">DailyConsumptionActivity</string>
    <string name="title_activity_add_food_to_list">AddFoodToList</string>
    <string name="title_activity_add_food">AddFoodActivity</string>
    <string name="title_activity_add_food_item">AddFoodItemActivity</string>
</resources>